--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^3.1.5",
+    "accordion-collapse-react-native": "^0.1.9",
     "fetch-intercept": "^2.3.1",
-    "lottie-react-native": "^2.6.1",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
+    "native-base": "^2.12.1",
     "promise-polyfill": "^8.1.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
-    "react-native": "0.59.4",
+    "react-native": "^0.59.6",
     "react-native-device-info": "^1.5.0",
+    "react-native-easy-gestures": "^2.2.4",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-side-drawer": "^1.1.4",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-view-shot": "^2.5.0",
     "react-navigation": "^3.9.1"
   },
   "devDependencies": {
