update mobX liberary

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-side-drawer": "^1.1.5",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1"
   },
