--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^3.1.5",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "accordion-collapse-react-native": "^0.1.9",
     "fetch-intercept": "^2.3.1",
     "mobx": "^5.9.4",
@@ -17,13 +18,20 @@
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "^0.59.6",
+    "react-native-carousel-control": "^2.0.1",
     "react-native-device-info": "^1.5.0",
     "react-native-easy-gestures": "^2.2.4",
-    "react-native-gesture-handler": "^1.1.0",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-segment-controller": "^1.0.0",
+    "react-native-segmented-control-tab": "^3.4.0",
     "react-native-side-drawer": "^1.1.4",
+    "react-native-svg": "^9.4.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-video-controls": "^2.2.3",
     "react-native-view-shot": "^2.5.0",
-    "react-navigation": "^3.9.1"
+    "react-navigation": "^3.9.1",
+    "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
