--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.2.1",
@@ -18,8 +19,14 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-flow": "^7.0.0",
     "@babel/runtime": "7.4.4",
     "babel-jest": "24.8.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.0",
     "react-test-renderer": "16.8.3"
