--- a/package.json
+++ b/package.json
@@ -7,28 +7,69 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/react-native": "^3.1.5",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
+    "accordion-collapse-react-native": "^0.1.9",
+    "fetch-intercept": "^2.3.1",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "native-base": "^2.12.1",
+    "promise-polyfill": "^8.1.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
-    "react-native": "0.59.8",
+    "react-native": "^0.59.6",
+    "react-native-carousel-control": "^2.0.1",
+    "react-native-device-info": "^1.5.0",
+    "react-native-easy-gestures": "^2.2.4",
     "react-native-gesture-handler": "^1.2.1",
-    "react-native-side-drawer": "^1.1.5",
+    "react-native-segment-controller": "^1.0.0",
+    "react-native-segmented-control-tab": "^3.4.0",
+    "react-native-side-drawer": "^1.1.4",
+    "react-native-svg": "^9.4.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.9.1"
+    "react-native-video-controls": "^2.2.3",
+    "react-native-view-shot": "^2.5.0",
+    "react-navigation": "^3.9.1",
+    "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/core": "7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-transform-classes": "^7.4.3",
+    "@babel/plugin-transform-flow-strip-types": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-flow": "^7.0.0",
-    "@babel/runtime": "7.4.4",
-    "babel-jest": "24.8.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.3",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.7.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native": "^4.0.1",
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest": "24.8.0",
-    "metro-react-native-babel-preset": "0.54.0",
+    "babel-preset-react-native-syntax": "^1.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-flowtype": "^3.6.1",
+    "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.7.1",
+    "metro-react-native-babel-preset": "^0.53.1",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
