--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "^0.59.6",
     "react-native-carousel-control": "^2.0.1",
     "react-native-device-info": "^1.5.0",
+    "react-native-dialog-input": "^1.0.7",
     "react-native-easy-gestures": "^2.2.4",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.2.1",
