--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OnceUponATime",
+  "name": "once-upon-a-time",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,7 +10,6 @@
   "dependencies": {
     "@ant-design/react-native": "^3.1.5",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
-    "accordion-collapse-react-native": "^0.1.9",
     "fetch-intercept": "^2.3.1",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
@@ -18,23 +17,17 @@
     "promise-polyfill": "^8.1.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
-    "react-native": "^0.59.6",
+    "react-native": "^0.60.4",
     "react-native-carousel-control": "^2.0.1",
     "react-native-device-info": "^1.5.0",
     "react-native-dialog-input": "^1.0.7",
     "react-native-easy-gestures": "^2.2.4",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.2.1",
-    "react-native-segment-controller": "^1.0.0",
-    "react-native-segmented-control-tab": "^3.4.0",
-    "react-native-side-drawer": "^1.1.4",
-    "react-native-svg": "^9.4.0",
-    "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.4.2",
     "react-native-video-controls": "^2.2.3",
     "react-native-view-shot": "^2.5.0",
-    "react-navigation": "^3.9.1",
-    "sprintf-js": "^1.1.2"
+    "react-navigation": "^3.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
