--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-share')
+    implementation project(':react-native-video')
     implementation project(':react-native-fs')
     implementation project(':react-native-view-shot')
     implementation project(':react-native-svg')
