--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fetch-intercept": "^2.3.1",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
+    "moment": "^2.24.0",
     "native-base": "^2.12.1",
     "promise-polyfill": "^8.1.0",
     "prop-types": "^15.7.2",
@@ -24,7 +25,9 @@
     "react-native-easy-gestures": "^2.2.4",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-share": "^2.0.0",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-video": "^4.4.4",
     "react-native-video-controls": "^2.2.3",
     "react-native-view-shot": "^2.5.0",
     "react-navigation": "^3.9.1"
