--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
-    "native-base": "^2.12.1",
+    "native-base": "^2.13.7",
     "promise-polyfill": "^8.1.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "^0.60.4",
+    "react-native-camera": "^3.3.2",
     "react-native-carousel-control": "^2.0.1",
     "react-native-device-info": "^1.5.0",
     "react-native-dialog-input": "^1.0.7",
@@ -26,6 +27,7 @@
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-share": "^2.0.0",
+    "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.4.2",
     "react-native-video": "^4.4.4",
     "react-native-video-controls": "^2.2.3",
