--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "^0.60.4",
+    "react-native-animatable": "^1.3.2",
     "react-native-camera": "^3.3.2",
     "react-native-carousel-control": "^2.0.1",
     "react-native-device-info": "^1.5.0",
