--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-share": "^2.0.0",
+    "react-native-siri-shortcut": "^1.6.2",
     "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.4.2",
     "react-native-video": "^4.4.4",
