--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^3.1.5",
+    "@react-native-community/cameraroll": "^1.2.1",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "fetch-intercept": "^2.3.1",
     "mobx": "^5.9.4",
@@ -28,6 +29,7 @@
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-share": "^2.0.0",
+    "react-native-simple-dialogs": "^1.2.0",
     "react-native-siri-shortcut": "^1.6.2",
     "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.4.2",
