--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-animatable": "^1.3.2",
     "react-native-camera": "^3.6.0",
     "react-native-carousel-control": "^2.0.1",
+    "react-native-coverflow": "^0.1.7",
     "react-native-device-info": "^1.5.0",
     "react-native-dialog-input": "^1.0.7",
     "react-native-easy-gestures": "^2.2.4",
