--- a/ios/OnceUponATime/Info.plist
+++ b/ios/OnceUponATime/Info.plist
@@ -38,17 +38,17 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera XD</string>
+	<string>你允許從前從前開啟相機嗎？</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>你允許從前從前讀取目前位置嗎？</string>
 	<key>NSMainNibFile~ipad</key>
 	<string>LaunchScreen</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>XDD</string>
+	<string>你允許從前從前開啟麥克風嗎？</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string></string>
+	<string>你允許從前從前讀取影片嗎？</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
+	<string>你允許從前從前讀取影片嗎？</string>
 	<key>NSUserActivityTypes</key>
 	<array>
 		<string>io.github.jasonxddd.sayHello</string>
@@ -83,6 +83,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
