--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-coverflow": "^0.1.7",
     "react-native-device-info": "^1.5.0",
     "react-native-dialog-input": "^1.0.7",
+    "react-native-draggable": "^3.0.0",
     "react-native-easy-gestures": "^2.2.4",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.2.1",
